# Aether-

./: .gitignore  Aether.spec  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SHANWAY_MASTER.md  TODO.md  WHITEPAPER.md  aether_dropper.py  analysis_engine.py  attraktor_engine.py  beauty_engine.py  browser_dock_bridge.py  build.rs  delta_engine.py  entropy_engine.py  fail_modes.py  governance_engine.py  observer_engine.py  operators.py  persist.py  pytest.ini  reconstruction_engine.py  requirements.txt  shanway_chat.py  shanway_llm.py  shanway_pipeline.py  shanway_registry.py  shanway_session.py  shanway_vault.py  shanway_web.py  start.py
data/: file_register.py  trusted_publishers.json
modules/: __init__.py  ae_evolution_core.md  ae_evolution_core.py  aelab_legacy.py  aethernet_temp.py  agent_control.py  agent_loop.py  analysis_engine.py  attractor_engine.py  audio_engine.py  bayes_engine.py  blockchain_interface.py  browser_engine.py  bus_bridge.py  chat_crypto.py  chat_sync_engine.py  cli.py  conway_engine.py  deep_scan_engine.py  delta_propagation.py  device_profile.py  diagnostics.py  dialog_engine.py  efficiency_monitor.py  embedding_engine.py  ethics_engine.py  evolved_language.py  graph_engine.py  gui.py  local_secret_store.py  log_system.py  media_processor.py  meta_engine.py  monitoring_engine.py  multimodal_router.py  observer_engine.py  optimize_engine.py  p2p_anchor_pool.py  persist.py  persistence_engine.py  (+37 more)
src/: aef.rs  app.rs  auth.rs  browser.rs  browser_embed.rs  bus_ipc.rs  chat_sync.rs  delta_vault.rs  gfx.rs  iced_shell.rs  inter_layer_bus.rs  lib.rs  main.rs  observation.rs  offline_cache.rs  pack.rs  (+9 more)
(+72 files in other folders)
