[package]
name = "aether_rust_shell"
version = "0.1.0"
edition = "2021"
description = "Rust shell migration for Aether"
license = "LicenseRef-Aether-Source-Available"

[lib]
name = "aether_rust_shell"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.4"
ed25519-dalek = "2"
eframe = "0.30"
egui_extras = "0.30"
flate2 = "1.0"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
interprocess = "2.2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = "1.8"
md5 = "0.7"
